# space-journey

./: .gitignore  README.md
.claude/: settings.local.json
.github/workflows/: deploy.yml
.planning/: PROJECT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
colab/: README.md  unsupervised_texture_generator.ipynb
colab-notebooks/: unsupervised-generation.ipynb
data-pipeline/: README.md  config.yaml  requirements.txt
data-pipeline/scripts/: download_moma_art.py  process_art.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  SETUP.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: sw.js
frontend/public/textures/: .gitkeep
frontend/scripts/: download-textures.mjs
frontend/src/: background-stars.js  celestial-bodies.js  flight-controller.js  main.js  particle-renderer.js  post-processing.js  raymarcher.js  skybox.js  solar-journey.js  space-world.js  styles.css  texture-library.js  visualization.js  wasm-loader.js  weather.js  weatherService.js
frontend/src/shaders/: chromatic-aberration.js  raymarcher.frag.glsl  raymarcher.vert.glsl
rust-wasm/: .gitignore  Cargo.toml
rust-wasm/src/: art_data.rs  curl_noise.rs  lib.rs  morph_controller.rs  nbody.rs  particle_system.rs  physics.rs  space_scenes.rs  weather_params.rs
