[package]
name = "unsupervised-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "CanvasRenderingContext2d",
    "ImageData",
    "Window",
    "Document",
] }
js-sys = "0.3"
noise = "0.9"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

[profile.release]
opt-level = "z"
lto = true
